syntax = "proto3";

package user;

option go_package = "proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
}

/*
message CreateUserRequest {
  oneof image {
    string user_id = 1;
    bytes image_bytes = 2;
  }
}

message CreateUserImageResponse {}
*/
